query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.




9/15/98 Everything has been ported to Perl.  NO MORE TCL.  This
transition should be relatively painless, except for the "params"
file.  This is the file that contains parameters you've set up on the
editparams.cgi page.  Before changing to Perl, this was a tcl-syntax
file, stored in the same directory as the code; after the change to
Perl, it becomes a perl-syntax file, stored in a subdirectory named
"data".  See the README file for more details on what version of Perl
you need.

So, if updating from an older version of Bugzilla, you will need to
edit data/param, change the email address listed for
$::param{'maintainer'}, and then go revisit the editparams.cgi page
and reset all the parameters to your taste.  Fortunately, your old
params file will still be around, and so you ought to be able to
cut&paste important bits from there.

Also, note that the "whineatnews" script has changed name (it now has
an extension of .pl instead of .tcl), so you'll need to change your
cron job.

And the "comments" file has been moved to the data directory.  Just do
"cat comments >> data/comments" to restore any old comments that may
have been lost.



9/2/98 Changed the way password validation works.  We now keep a
crypt'd version of the password in the database, and check against
that.  (This is silly, because we're also keeping the plaintext
version there, but I have plans...)  Stop passing the plaintext
password around as a cookie; instead, we have a cookie that references
a record in a new database table, logincookies.

IMPORTANT: if updating from an older version of Bugzilla, you must run
the following commands to keep things working:
